--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -291,8 +291,53 @@ text-decoration: underline;
     font-size: 22px;
 }
 }
+.breed-image-slider {
+    position: relative;
+    max-width: 100%;
+    height: auto;
+}
 
-/* Favorites CSS STARTS*/
+.breed-image-placeholder {
+    position: relative;
+    overflow: hidden;
+}
+
+.slider-images {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slider-img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.slider-dots {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    border-radius: 50%;
+    background-color: #bbb;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.dot.active {
+    background-color: #717171;
+}
+/* Breeds CSS ENDS */
+
+/* Favorites CSS STARTS */
 /* Container for the favorites section */
 .favorites-container {
     display: flex;
