--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -144,133 +144,122 @@
 
 /* Breeds section CSS STARTS */
 #breeds {
-display: flex;
-justify-content: center;
-padding: 20px;
-max-width: 1200px;
-margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    margin: 0 auto;
 }
 
-/* Breed Container */
 .breed-container {
-display: flex;
-flex-direction: column;
-background-color: white;
-padding: 20px;
-border-radius: 8px;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-width: 100%;
-max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
-/* Breed Select & Search Bar */
 .breed-select {
-display: flex;
-flex-direction: column;
-margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
 }
 
 .breed-text {
-font-size: 16px;
-color: #333;
-margin-bottom: 10px;
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 10px;
 }
 
 .value-container {
-position: relative;
-display: flex;
-cursor: pointer;
+    position: relative;
+    display: flex;
+    cursor: pointer;
 }
 
-.search-breed-input {
-width: 100%;
-padding: 10px;
-font-size: 16px;
-border-radius: 4px;
-border: 1px solid #ddd;
-box-sizing: border-box;
-background-color: #f9f9f9;
-}
-
-.search-breed-input:focus {
-outline: none;
-border-color: #007bff;
-}
-.close-button {
-background: none;
-border: none;
-font-size: 18px;
-cursor: pointer;
-margin-left: -25px;
-color: #666;
-}
-
-.close-button:hover {
-color: #000;
+.search-breed-dropdown{
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    font-size: 15px;
 }
 
 /* Breed List */
 .breed-list {
-list-style-type: none;
-margin: 0;
-padding: 0;
-max-height: 200px;
-overflow-y: auto;
-background-color: white;
-border: 1px solid #ddd;
-border-top: none;
-display: none; /* Hidden by default */
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    max-height: 200px;
+    overflow-y: auto;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-top: none;
+    display: none; /* Hidden by default */
 }
 
 .breed-list li {
-padding: 10px;
-cursor: pointer;
-transition: background-color 0.3s ease;
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .breed-list li:hover {
-background-color: #f0f0f0;
+    background-color: #f0f0f0;
 }
 
 /* Breed Details */
 .breed-details {
 padding-top: 20px;
-text-align: center;
+text-align: left;
 }
 
 .breed-image-placeholder img {
-max-width: 100%;
-height: auto;
-border-radius: 8px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
-.breed-name {
-font-size: 24px;
-margin: 10px 0;
-color: #333;
+#breed-name {
+    font-weight: bold;
+    color: black;
+    font-size: 1.5em; 
+    display: inline-block; 
+    margin-right: 8px; 
 }
 
-.breed-origin, .breed-id {
-font-size: 14px;
-color: #777;
-margin: 5px 0;
+#breed-origin {
+    font-weight: bold;
+    color: #a8a8a8; 
+    font-size: 1.2em;
+    display: inline-block;
+    margin-right: 8px; 
 }
 
-.breed-description {
-font-size: 16px;
-color: #555;
-margin-bottom: 20px;
+#breed-id {
+    font-style: italic;
+    color: #a8a8a8; 
+    font-size: 1em; 
+    display: inline-block;
 }
 
-.wiki-link {
-text-decoration: none;
-color: #007bff;
-font-weight: bold;
+#breed-description {
+    color: #636a74;
+    font-size: 1em; 
+    margin-top: 10px; 
+    line-height: 1.5; 
 }
 
-.wiki-link:hover {
-text-decoration: underline;
+#wiki-link {
+    color: rgb(255, 104, 65);
+    font-size: 1em;
+    font-weight: bold;
+    text-decoration: none;
+    margin-top: 10px; 
+    display: inline-block;
 }
+
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
@@ -409,17 +398,21 @@ i {
     gap: 1rem;
     padding: 1rem;
     background-color: #ffffff;
+    
 }
 
 /* Make the images in scroll view behave responsively */
 .favorite-images-grid.bar-view img {
     width: 100%;
-    max-width: 200px;
     object-fit: cover;
-    height: 150px; /* Adjust according to your needs */
+    border-radius: 10px;
 }
 
 /* Hover state for scroll images */
 .favorite-images-grid.bar-view img:hover {
     transform: scale(1.05);
+}
+
+.favorite-item p{
+    font-size: 15px;
 }
