--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -208,6 +208,8 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    border: 1px solid #0f0f0f;
+    border-radius: 5px;
 }
 
 .breed-text {
